--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "welcome-dispatch",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "tsc && yarn build && export"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Welcome-LLC/welcome-dispatch.git"
-  },
-  "author": "Welcome LLC",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Welcome-LLC/welcome-dispatch/issues"
-  },
-  "homepage": "https://github.com/Welcome-LLC/welcome-dispatch#readme",
-  "dependencies": {
-    "next": "^9.5.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
-    "@types/next": "^9.0.0",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.2",
-    "babel-plugin-styled-components": "^1.11.1",
-    "typescript": "^3.9.7"
-  }
+	"name": "welcome-dispatch",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.ts",
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"export": "tsc && yarn build && export"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Welcome-LLC/welcome-dispatch.git"
+	},
+	"author": "Welcome LLC",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Welcome-LLC/welcome-dispatch/issues"
+	},
+	"homepage": "https://github.com/Welcome-LLC/welcome-dispatch#readme",
+	"dependencies": {
+		"firebase": "^7.18.0",
+		"next": "^9.5.2",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"styled-components": "^5.1.1"
+	},
+	"devDependencies": {
+		"@types/firebase": "^3.2.1",
+		"@types/next": "^9.0.0",
+		"@types/node": "^14.0.27",
+		"@types/react": "^16.9.46",
+		"@types/react-dom": "^16.9.8",
+		"@types/styled-components": "^5.1.2",
+		"babel-plugin-styled-components": "^1.11.1",
+		"dotenv": "^8.2.0",
+		"typescript": "^3.9.7"
+	}
 }
