--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,23 @@
 {
-  "compilerOptions": {
-    "module": "ESNext",
-    "noImplicitAny": true,
-    "outDir": "lib",
-    "sourceMap": true,
-    "strict": true,
-    "target": "ESNext",
-    "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true
-  },
-  "compileOnSave": true,
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"module": "ESNext",
+		"noImplicitAny": true,
+		"outDir": "lib",
+		"sourceMap": true,
+		"strict": true,
+		"target": "ESNext",
+		"jsx": "preserve",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true
+	},
+	"compileOnSave": true,
+	"include": ["src"],
+	"exclude": ["node_modules"]
 }
