--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,6 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -11,13 +10,12 @@
   "engines": {
     "node": "12.18.3"
   },
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
-    "typescript": "^3.8.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
