--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "welcome-dispatch",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "index.js",
 	"scripts": {
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"export": "tsc && yarn build && export"
+		"export": "yarn build && export"
 	},
 	"repository": {
 		"type": "git",
@@ -27,14 +27,7 @@
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
-		"@types/firebase": "^3.2.1",
-		"@types/next": "^9.0.0",
-		"@types/node": "^14.0.27",
-		"@types/react": "^16.9.46",
-		"@types/react-dom": "^16.9.8",
-		"@types/styled-components": "^5.1.2",
 		"babel-plugin-styled-components": "^1.11.1",
-		"dotenv": "^8.2.0",
-		"typescript": "^3.9.7"
+		"dotenv": "^8.2.0"
 	}
 }
