--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"next": "^9.5.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-hook-form": "^6.4.0",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
