--- a/functions/package.json
+++ b/functions/package.json
@@ -1,16 +1,17 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
+  "main": "src/index.js",
   "scripts": {
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12.18.3"
+    "node": "10"
   },
-  "main": "src/index.js",
   "dependencies": {
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
