--- a/firebase.json
+++ b/firebase.json
@@ -3,9 +3,6 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "functions": {
-    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
-  },
   "hosting": {
     "public": "public",
     "ignore": [
@@ -29,6 +26,9 @@
     },
     "ui": {
       "enabled": true
+    },
+    "hosting": {
+      "port": 5000
     }
   }
 }
