--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "10"
   },
   "dependencies": {
+    "algoliasearch": "^4.5.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
