--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
 	},
 	"homepage": "https://github.com/Welcome-LLC/welcome-dispatch#readme",
 	"dependencies": {
+		"@react-google-maps/api": "^1.10.1",
+		"date-fns": "^2.16.1",
 		"firebase": "^7.18.0",
 		"next": "^9.5.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-hook-form": "^6.4.0",
-		"styled-components": "^5.1.1"
+		"styled-components": "^5.1.1",
+		"use-places-autocomplete": "^1.5.0"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.11.1",
