--- a/functions/package.json
+++ b/functions/package.json
@@ -6,16 +6,16 @@
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy:staging": "firebase deploy -P staging --only functions",
+    "deploy:prod": "firebase deploy -P production --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "10"
   },
   "dependencies": {
-    "algoliasearch": "^4.5.0",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
