--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
 	"bracketSpacing": true,
 	"jsxBracketSameLine": true,
 	"singleQuote": true,
-	"trailingComma": "all",
+	"trailingComma": "none",
 	"semi": false,
 	"useTabs": true,
 	"tabWidth": 4,
